2018-11-17 18:35 Add sources

Descriptions can be found in `README' file